# AdventOfCode

./: pyproject.toml
src/aoc/: __init__.py  cli.py
src/aoc/calendar/: 01_12_2022.py  __init__.py  day_1_2022.py  day_2_2022.py  day_3_2022.py  day_4_2022.py  day_one_2022.py  registry.py
tests/aoc/: test_version.py
